add_subdirectory(proto)
add_library(ExchangeFormat ${CMAKE_CURRENT_SOURCE_DIR}/ExchangeFormat.cpp)
target_link_libraries(ExchangeFormat PUBLIC Train ExchangeFormatProto)
include_directories(${ExchangeFormatProto_INCLUDE_DIRS} ${Train_INCLUDE_DIRS})
target_include_directories(ExchangeFormat PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
